--- a/GmailEbay/.classpath
+++ b/GmailEbay/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/VeeraSekaran/.gradle/caches/modules-2/files-2.1/org.seleniumhq.selenium/selenium-chrome-driver/3.13.0/f1ff71d800fa72611cd69c495de232700ec75e9e/selenium-chrome-driver-3.13.0.jar" sourcepath="C:/Users/VeeraSekaran/.gradle/caches/modules-2/files-2.1/org.seleniumhq.selenium/selenium-chrome-driver/3.13.0/a026b5aca5bd4d42a21fb9eb41348eb003e344ef/selenium-chrome-driver-3.13.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
